@@ -11,12 +11,15 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import se.inera.intyg.certificateservice.application.certificate.dto.config.CertificateDataConfigCheckboxMultipleCode;
 import se.inera.intyg.certificateservice.application.certificate.dto.config.Layout;
+import se.inera.intyg.certificateservice.domain.certificate.model.Status;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementConfigurationCheckboxMultipleCode;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementConfigurationCode;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementConfigurationTextArea;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementLayout;
+import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementMessage;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.ElementSpecification;
 import se.inera.intyg.certificateservice.domain.certificatemodel.model.FieldId;
+import se.inera.intyg.certificateservice.domain.certificatemodel.model.MessageLevel;
 import se.inera.intyg.certificateservice.domain.common.model.Code;
 
 class CertificateDataCheckboxMultipleCodeConfigConverterTest {
@@ -86,11 +89,59 @@ class CertificateDataCheckboxMultipleCodeConfigConverterTest {
         elementSpecification, FK3226_CERTIFICATE);
 
     assertAll(
-        () -> assertEquals("ID_ONE", result.getList().get(0).getId()),
-        () -> assertEquals("LABEL_ONE", result.getList().get(0).getLabel()),
+        () -> assertEquals("NAME", result.getText()),
+        () -> assertEquals("ID_ONE", result.getList().getFirst().getId()),
+        () -> assertEquals("LABEL_ONE", result.getList().getFirst().getLabel()),
         () -> assertEquals("ID_TWO", result.getList().get(1).getId()),
         () -> assertEquals("LABEL_TWO", result.getList().get(1).getLabel()),
         () -> assertEquals(Layout.COLUMNS, result.getLayout())
+    );
+  }
+
+  @Test
+  void shallSetCorrectValuesForListWithMessage() {
+    final var elementSpecification = ElementSpecification.builder()
+        .configuration(
+            ElementConfigurationCheckboxMultipleCode.builder()
+                .name("NAME")
+                .list(
+                    List.of(
+                        new ElementConfigurationCode(
+                            new FieldId("ID_ONE"),
+                            "LABEL_ONE",
+                            new Code("CODE", "CODE_SYSTEM", "DISPLAY_NAME")),
+                        new ElementConfigurationCode(
+                            new FieldId("ID_TWO"),
+                            "LABEL_TWO",
+                            new Code("CODE", "CODE_SYSTEM", "DISPLAY_NAME"))
+                    )
+                )
+                .message(
+                    ElementMessage.builder()
+                        .content("Message")
+                        .level(MessageLevel.INFO)
+                        .includedForStatuses(List.of(Status.DRAFT))
+                        .build()
+                )
+                .elementLayout(ElementLayout.COLUMNS)
+                .build()
+        )
+        .build();
+
+    final CertificateDataConfigCheckboxMultipleCode result = (CertificateDataConfigCheckboxMultipleCode) certificateDataCheckboxMultipleCodeConfigConverter.convert(
+        elementSpecification, FK3226_CERTIFICATE);
+
+    assertAll(
+        () -> assertEquals("NAME", result.getText()),
+        () -> assertEquals("ID_ONE", result.getList().getFirst().getId()),
+        () -> assertEquals("LABEL_ONE", result.getList().getFirst().getLabel()),
+        () -> assertEquals("ID_TWO", result.getList().get(1).getId()),
+        () -> assertEquals("LABEL_TWO", result.getList().get(1).getLabel()),
+        () -> assertEquals(Layout.COLUMNS, result.getLayout()),
+        () -> assertEquals("Message", result.getMessage().getContent()),
+        () -> assertEquals(
+            se.inera.intyg.certificateservice.application.certificate.dto.config.MessageLevel.INFO,
+            result.getMessage().getLevel())
     );
   }
 }
